buidling character sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,22 +1,27 @@
 {
-  "BOILERPLATE.AbilityStr": "Strength",
-  "BOILERPLATE.AbilityCon": "Constitution",
-  "BOILERPLATE.AbilityDex": "Dexterity",
-  "BOILERPLATE.AbilityInt": "Intelligence",
-  "BOILERPLATE.AbilityWis": "Wisdom",
-  "BOILERPLATE.AbilityCha": "Charisma",
-
-  "BOILERPLATE.AbilityStrAbbr": "str",
-  "BOILERPLATE.AbilityConAbbr": "con",
-  "BOILERPLATE.AbilityDexAbbr": "dex",
-  "BOILERPLATE.AbilityIntAbbr": "int",
-  "BOILERPLATE.AbilityWisAbbr": "wis",
-  "BOILERPLATE.AbilityChaAbbr": "cha",
-
-  "BOILERPLATE.EffectCreate": "Create Effect",
-  "BOILERPLATE.EffectToggle": "Toggle Effect",
-  "BOILERPLATE.EffectEdit": "Edit Effect",
-  "BOILERPLATE.EffectDelete": "Delete Effect",
-
-  "BOILERPLATE.Add": "Add"
+    "INVISIBLESUN.AbilityAccuracy": "Accuracy",
+    "INVISIBLESUN.AbilityMovement": "Movement",
+    "INVISIBLESUN.AbilityPhysicality": "Physicality",
+    "INVISIBLESUN.AbilityPerception": "Perception",
+    "INVISIBLESUN.AbilitySorcery": "Sorcery",
+    "INVISIBLESUN.AbilityInteract": "Interact",
+    "INVISIBLESUN.AbilityIntellect": "Intellect",
+    "INVISIBLESUN.AbilitySortilege": "Sortilege",
+    "INVISIBLESUN.AbilityStr": "Strength",
+    "INVISIBLESUN.AbilityCon": "Constitution",
+    "INVISIBLESUN.AbilityDex": "Dexterity",
+    "INVISIBLESUN.AbilityInt": "Intelligence",
+    "INVISIBLESUN.AbilityWis": "Wisdom",
+    "INVISIBLESUN.AbilityCha": "Charisma",
+    "INVISIBLESUN.AbilityStrAbbr": "str",
+    "INVISIBLESUN.AbilityConAbbr": "con",
+    "INVISIBLESUN.AbilityDexAbbr": "dex",
+    "INVISIBLESUN.AbilityIntAbbr": "int",
+    "INVISIBLESUN.AbilityWisAbbr": "wis",
+    "INVISIBLESUN.AbilityChaAbbr": "cha",
+    "INVISIBLESUN.EffectCreate": "Create Effect",
+    "INVISIBLESUN.EffectToggle": "Toggle Effect",
+    "INVISIBLESUN.EffectEdit": "Edit Effect",
+    "INVISIBLESUN.EffectDelete": "Delete Effect",
+    "INVISIBLESUN.Add": "Add"
 }
